Remove unnecessary details from section headers

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             </div>
         </div>
         
-        <div class="section-header">FASE B: Pad Benjamin (Classificatie) (28 min)</div>
+        <div class="section-header">FASE B: Pad Benjamin (28 min)</div>
 
         <div class="activity-card">
             <div class="activity-type type-papier">PAPIER</div>
             <div class="activity-content">
-                <h3>3. Benjamin Casus (Analyse)</h3>
+                <h3>3. Benjamin Casus</h3>
                 <p>10 min: Analyseer het budget van Benjamin in het boek. Bepaal wat vast en variabel is.</p>
                 <p style="font-style: italic;">Werk in jullie boek op pagina 1 en 2 (Oefening 1 & 2).</p>
             </div>
@@ -171,12 +171,12 @@
         </div>
 
 
-        <div class="section-header">FASE C: Pad Mo & Salima (Berekening) (30 min)</div>
+        <div class="section-header">FASE C: Pad Mo & Salima (30 min)</div>
 
         <div class="activity-card">
             <div class="activity-type type-papier">PAPIER</div>
             <div class="activity-content">
-                <h3>6. Mo & Salima Casus (Diepte-analyse)</h3>
+                <h3>6. Mo & Salima Casus</h3>
                 <p>15 min: Lees de casus en vul de budgettabel in (Oefening 3). Bereken wat hun saldo is.</p>
                 <p style="font-style: italic;">Werk in jullie boek op pagina 3 en 4 (Oefening 3).</p>
             </div>
@@ -191,7 +191,7 @@
             </div>
         </div>
         
-        <div class="section-header">FASE D: Pad Celine (Probleem & Oplossing) (25 min)</div>
+        <div class="section-header">FASE D: Pad Celine (25 min)</div>
 
         <div class="activity-card">
             <div class="activity-type type-papier">PAPIER</div>
@@ -205,7 +205,7 @@
         <div class="activity-card">
             <div class="activity-type type-digitaal">PAD 6: Tips voor Celine</div>
             <div class="activity-content">
-                <h3>9. Pad 6: Tips voor Celine (Creatief)</h3>
+                <h3>9. Pad 6: Tips voor Celine</h3>
                 <p>10 min creatieve opdracht: Schrijf minstens drie concrete en gemotiveerde tips om Celine te helpen haar financiën terug op orde te krijgen.</p>
                 <a href="https://albertshalaj.github.io/pad6/" class="activity-link" target="_blank">✍️ Start Pad 6</a>
             </div>
